--- a/level-1/step-3/step-3.css
+++ b/level-1/step-3/step-3.css
@@ -1,17 +1,26 @@
 /* Step-3 You can assign padding to all sides of a container by using the padding property. */
 
 .content-mid {
- 
+  padding: 80px;
 }
 
 .content-mid-header {
   background: #444;
+  height: 75px;
+  width: 100%;
+
 }
 
 .content-container {
-
+  height: 400px;
+  width: 100%;
 }
 
 .content {
   background: #D8D8D8;
+  padding: 20px;
+  height: 450px;
+  width: 100%;
+  text-align: center;
+  
 }
